fixed some sizing issues on mobile

--- a/styles/css/modules/filters.css
+++ b/styles/css/modules/filters.css
@@ -13,7 +13,7 @@
 .filter-switch {
 	position: relative;
 	height: 3rem;
-	margin-top: 1rem;
+	margin-bottom: 1rem;
 	margin-right: 0.5rem;
 }
 
@@ -37,7 +37,7 @@
 	margin-left: 4rem;
 	margin-right: 1rem;
 
-	font-size: 1.1rem;
+	/* font-size: 1.1rem; */
 	font-weight: 800;
 }
 /* The slider */
@@ -131,8 +131,7 @@
 	.filter-switch {
 		position: relative;
 		height: 3rem;
-		margin-bottom: 1rem;
-		margin-right: 0;
-		margin-left: 2.5rem;
+		margin: 1rem 0rem 1rem 2.5rem;
+		
 	}
 }
