--- a/styles/css/modules/layoutSizing.css
+++ b/styles/css/modules/layoutSizing.css
@@ -1,6 +1,7 @@
 header {
 	width: 100%;
-	max-height: 140px;
+	min-height: 130px;
+	
 	height: calc(100vh / 4.8);
 }
 nav {
